<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorGradient2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Sign_Up">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:background="@drawable/bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/manga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/g_bold"
        android:text="@string/read_the_best_manga"
        android:textColor="@color/colorGray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/g_light"
        android:text="@string/create_your_account"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite1"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/mlight"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:textColor="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/mlight"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:textColor="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/mlight"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColor="@color/colorWhite1"
            android:textColorHint="@color/colorWhite1" />

    </LinearLayout>

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bg_button_primary"
        android:fontFamily="@font/mmedium"
        android:imeOptions="actionDone"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/have_an_account_sign_in"
        android:textColor="@color/colorWhite1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>